tests/vertical-slice/reject/fork_with_args.hew
// Reject fixture: fork_with_args — implicit-spawn callee takes arguments.
//
// Argument-bearing task spawns are only valid through the named form
// (`fork name = f(args)`), where the checker fully type-checks the call.
// Implicit scope-statement spawns (`scope { f(args); }`) bypass the
// checker and must remain nullary; ill-typed args there would bypass
// type-checking and reach codegen unchecked.
//
// This fixture pins the fail-closed boundary at:
//   hew-hir/src/lower.rs  validate_task_spawn_call (non-named path)
//
// Harness verb: hew compile
// Expected diagnostics:
//   - E_HIR
//   - "spawned call must have zero arguments"
fn unit_with_arg(x: i64) {}

actor _Worker {
    receive fn run() -> i64 {
        scope {
            unit_with_arg(42);
        };
        0
    }
}

fn main() -> i64 {
    let w = spawn _Worker;
    match await w.run() {
        Ok(v) => v,
        Err(_e) => 0,
    }
}
